<resources>
    <string name="app_name">DocApp</string>
    <string name="facebook_app_id">2282374208662217</string>
    <string name="fb_login_protocol_scheme">fb2282374208662217</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_myappoint">My Appointment</string>
    <string name="drawer_history">History</string>
    <string name="drawer_aboutus">About Us</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_login">Login</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="google_maps_api_key">AIzaSyD_k-LxubanDwHAduZRI73VQQnLCByB0oE</string>
</resources>
