<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/drawer_home"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/my_appoint"
            android:title="@string/drawer_myappoint"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/login"
            android:title="@string/drawer_login"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/feedback"
            android:title="@string/drawer_feedback"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/aboutus"
            android:title="@string/drawer_aboutus"
            app:showAsAction="ifRoom"/>


    </group>
</menu>